--- a/chatbot-app-master/package.json
+++ b/chatbot-app-master/package.json
@@ -21,6 +21,7 @@
     "dialogflow": "^0.8.2",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
+    "force": "^0.0.3",
     "mongoose": "^5.4.20"
   },
   "devDependencies": {
